--- a/omni/SNOWFLAKE/DBT.PROD/google_ads_campaign_performance.view.yaml
+++ b/omni/SNOWFLAKE/DBT.PROD/google_ads_campaign_performance.view.yaml
@@ -12,6 +12,8 @@ dimensions:
   date:
     sql: '"DATE"'
     label: Date
+    timeframes: [ raw, date, week, month, quarter, year ]
+    convert_tz: false
 
   account:
     sql: '"ACCOUNT"'
@@ -37,37 +39,71 @@ dimensions:
 
   is_optimization_conversion:
     sql: '"IS_OPTIMIZATION_CONVERSION"'
+    label: Is Optimization Conversion
+    description: True if this conversion action is the primary optimization event for the account
+
+  # Hidden base columns for aggregation
+  spend:
+    sql: '"SPEND"'
+    hidden: true
+
+  impressions:
+    sql: '"IMPRESSIONS"'
+    hidden: true
+
+  clicks:
+    sql: '"CLICKS"'
+    hidden: true
+
+  conversions:
+    sql: '"CONVERSIONS"'
+    hidden: true
+
+  conversion_value:
+    sql: '"CONVERSION_VALUE"'
+    hidden: true
+
+  opt_conv_value:
+    sql: CASE WHEN "IS_OPTIMIZATION_CONVERSION" = TRUE THEN "CONVERSIONS" ELSE 0 END
+    hidden: true
 
 measures:
   count:
     aggregate_type: count
 
   total_spend:
-    sql: '"SPEND"'
+    sql: ${spend}
     label: Spend
     format: usdcurrency_2
     aggregate_type: sum
 
   total_impressions:
-    sql: '"IMPRESSIONS"'
+    sql: ${impressions}
     label: Impressions
     format: number_0
     aggregate_type: sum
 
   total_clicks:
-    sql: '"CLICKS"'
+    sql: ${clicks}
     label: Clicks
     format: number_0
     aggregate_type: sum
 
   total_conversions:
-    sql: '"CONVERSIONS"'
+    sql: ${conversions}
     label: Conversions
     format: number_2
     aggregate_type: sum
 
+  optimization_conversions:
+    sql: ${opt_conv_value}
+    label: Optimization Conversions
+    description: Conversions from the primary optimization event for each account
+    format: number_2
+    aggregate_type: sum
+
   total_conversion_value:
-    sql: '"CONVERSION_VALUE"'
+    sql: ${conversion_value}
     label: Conversion Value
     format: usdcurrency_2
     aggregate_type: sum
@@ -92,6 +128,12 @@ measures:
     label: CPA
     format: usdcurrency_2
 
+  cost_per_optimization_conversion:
+    sql: ${total_spend} / NULLIF(${optimization_conversions}, 0)
+    label: Cost per Optimization Conversion
+    description: Cost per primary optimization conversion
+    format: usdcurrency_2
+
   roas:
     sql: ${total_conversion_value} / NULLIF(${total_spend}, 0)
     label: ROAS
@@ -101,81 +143,3 @@ measures:
     sql: ${total_conversions} / NULLIF(${total_clicks}, 0) * 100
     label: Conversion Rate
     format: percent_2
-
-#The info below was pulled from your dbt repository and is read-only.
-dbt:
-  name: google_ads_campaign_performance
-  target_schema: PROD
-  config:
-    materialized: table
-  code: |-
-    {{ config(materialized = "table") }}
-
-    -- Google Ads Campaign Performance
-    -- Combines campaign spend with conversions WITHOUT duplication
-    -- Uses ROW_NUMBER to assign spend only to first row per campaign/date
-    -- Captures ALL spend (including Performance Max, Demand Gen, Video)
-
-    WITH campaign_spend AS (
-        SELECT * FROM {{ ref('int_google_campaign_spend') }}
-    ),
-
-    campaign_conversions AS (
-        SELECT * FROM {{ ref('int_google_campaign_conversions') }}
-    ),
-
-    optimization_conv AS (
-        SELECT * FROM {{ ref('optimization_conversions') }}
-        WHERE platform = 'google'
-    ),
-
-    joined AS (
-        SELECT 
-            COALESCE(cs.date, cc.date) AS date,
-            COALESCE(cs.account, cc.account) AS account,
-            COALESCE(cs.customer_id, cc.customer_id) AS customer_id,
-            COALESCE(cs.campaign, cc.campaign) AS campaign,
-            COALESCE(cs.campaign_id, cc.campaign_id) AS campaign_id,
-            cc.conversion_action_name,
-            cs.spend,
-            cs.impressions,
-            cs.clicks,
-            cc.conversions,
-            cc.conversion_value,
-            ROW_NUMBER() OVER (
-                PARTITION BY 
-                    COALESCE(cs.date, cc.date),
-                    COALESCE(cs.customer_id, cc.customer_id),
-                    COALESCE(cs.campaign_id, cc.campaign_id)
-                ORDER BY cc.conversion_action_name NULLS LAST
-            ) AS rn
-        FROM campaign_spend cs
-        FULL OUTER JOIN campaign_conversions cc
-            ON cs.date = cc.date
-            AND cs.customer_id = cc.customer_id
-            AND cs.campaign_id = cc.campaign_id
-    )
-
-    SELECT 
-        j.date,
-        j.account,
-        j.customer_id,
-        j.campaign,
-        j.campaign_id,
-        j.conversion_action_name,
-        CASE WHEN j.rn = 1 THEN j.spend ELSE 0 END AS spend,
-        CASE WHEN j.rn = 1 THEN j.impressions ELSE 0 END AS impressions,
-        CASE WHEN j.rn = 1 THEN j.clicks ELSE 0 END AS clicks,
-        COALESCE(j.conversions, 0) AS conversions,
-        COALESCE(j.conversion_value, 0) AS conversion_value,
-        div0(CASE WHEN j.rn = 1 THEN j.spend ELSE 0 END, CASE WHEN j.rn = 1 THEN j.clicks ELSE 0 END) AS cpc,
-        div0(CASE WHEN j.rn = 1 THEN j.clicks ELSE 0 END, CASE WHEN j.rn = 1 THEN j.impressions ELSE 0 END) * 100 AS ctr,
-        div0(CASE WHEN j.rn = 1 THEN j.spend ELSE 0 END, COALESCE(j.conversions, 0)) AS cpa,
-        div0(COALESCE(j.conversion_value, 0), CASE WHEN j.rn = 1 THEN j.spend ELSE 0 END) AS roas,
-        CASE WHEN oc.optimization_conversion IS NOT NULL THEN TRUE ELSE FALSE END AS is_optimization_conversion
-    FROM joined j
-    LEFT JOIN optimization_conv oc
-        ON j.account = oc.account
-        AND j.conversion_action_name = oc.optimization_conversion
-    ORDER BY 1 DESC, 2, 3, 4
-  referenced_by: [ all_ads_performance, all_spend_by_account ]
