--- a/omni/SNOWFLAKE/DBT.PROD/google_ads_adgroup_performance.view.yaml
+++ b/omni/SNOWFLAKE/DBT.PROD/google_ads_adgroup_performance.view.yaml
@@ -235,3 +235,4 @@ dbt:
         ON j.account = oc.account
         AND j.conversion_action_name = oc.optimization_conversion
     ORDER BY 1 DESC, 2, 3, 4, 5
+  referenced_by: [ all_ads_performance ]
